[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/client/ui/ui_play_space.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/client/game/client_gateway.gd" type="Script" id=2]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/client/game/temp_debug_info.gd" type="Script" id=4]

[node name="ClientGateway" type="Node"]
script = ExtResource( 2 )

[node name="PlaySpace" parent="." instance=ExtResource( 1 )]

[node name="DebugInfo" type="Control" parent="."]
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="MD5" type="LinkButton" parent="DebugInfo"]
margin_right = 12.0
margin_bottom = 26.0
hint_tooltip = "验证牌山 md5"
text = "MD5"

[node name="OpenDebug" type="Button" parent="DebugInfo"]
anchor_left = 0.015625
anchor_top = 0.0694444
anchor_right = 0.114063
anchor_bottom = 0.125
margin_left = 100.0
margin_top = 50.0
margin_right = 199.0
margin_bottom = 76.0
focus_mode = 0
enabled_focus_mode = 0
text = "Debug (Esc)"

[node name="DebugConsole" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Mask" type="ColorRect" parent="DebugConsole"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.768627 )

[node name="Deck" type="RichTextLabel" parent="DebugConsole"]
margin_left = 200.0
margin_top = 180.0
margin_right = 1080.0
margin_bottom = 308.0
bbcode_enabled = true
bbcode_text = "[shake rate=5 level=10]DEBUG[/shake]"
text = "DEBUG"

[node name="WindowDialog" type="WindowDialog" parent="DebugConsole"]
visible = true
margin_left = 180.0
margin_top = 400.0
margin_right = 440.0
margin_bottom = 560.0
window_title = "Debug Console"

[node name="MarginContainer" type="MarginContainer" parent="DebugConsole/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="GridContainer" type="GridContainer" parent="DebugConsole/WindowDialog/MarginContainer"]
margin_right = 224.0
margin_bottom = 120.0
columns = 2

[node name="NewGame" type="Button" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_right = 108.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "开一局新游戏"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KongTimes" type="SpinBox" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 30.0
size_flags_horizontal = 3
max_value = 4.0
prefix = "杠了"
suffix = "次"

[node name="PlayerIndex" type="OptionButton" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_top = 34.0
margin_right = 108.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
text = "东家 视角"
items = [ "东家 视角", null, false, 0, null, "南家 视角", null, false, 1, null, "西家 视角", null, false, 2, null, "北家 视角", null, false, 3, null ]
selected = 0

[node name="Draw" type="Button" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_left = 112.0
margin_top = 34.0
margin_right = 220.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
text = "摸一张牌"

[node name="XRayLabel" type="Label" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_top = 74.0
margin_right = 108.0
margin_bottom = 94.0
text = "展示别家手牌"

[node name="XRayButton" type="CheckButton" parent="DebugConsole/WindowDialog/MarginContainer/GridContainer"]
margin_left = 112.0
margin_top = 64.0
margin_right = 220.0
margin_bottom = 104.0
focus_mode = 0
enabled_focus_mode = 0
text = "透视"

[connection signal="pressed" from="DebugInfo/MD5" to="." method="_on_MD5_pressed"]
[connection signal="pressed" from="DebugInfo/OpenDebug" to="DebugInfo" method="_on_OpenDebug_pressed"]
[connection signal="popup_hide" from="DebugConsole/WindowDialog" to="DebugInfo" method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="DebugConsole/WindowDialog/MarginContainer/GridContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="value_changed" from="DebugConsole/WindowDialog/MarginContainer/GridContainer/KongTimes" to="." method="_on_KongTimes_value_changed"]
[connection signal="item_selected" from="DebugConsole/WindowDialog/MarginContainer/GridContainer/PlayerIndex" to="." method="_on_PlayerIndex_item_selected"]
[connection signal="pressed" from="DebugConsole/WindowDialog/MarginContainer/GridContainer/Draw" to="." method="_on_Draw_pressed"]
[connection signal="toggled" from="DebugConsole/WindowDialog/MarginContainer/GridContainer/XRayButton" to="." method="_on_XRayButton_toggled"]
