extends Control
# docstring 文档说明


################################################################
# Signals 信号
################################################################

################################################################
# Enums 枚举
################################################################

################################################################
# Constants 常量
################################################################

################################################################
# Exported variables 导出变量
################################################################

################################################################
# Public variables 公共变量
################################################################

################################################################
# Private variables 私有变量
################################################################

################################################################
# Onready variables 自动初始化变量
################################################################


################################################################
# built-in virtual methods 内置的虚函数
################################################################
#func _init():
#	pass


func _ready():
	pass


#func _process(delta):
#	pass


func _unhandled_key_input(event):
	if event is InputEventKey and Input.is_action_just_pressed("ui_cancel"):
		if not get_parent().get_node_or_null("DebugConsole").visible:
			_on_OpenDebug_pressed()


################################################################
# Public methods 公共函数
################################################################


################################################################
# Private methods 私有函数
################################################################


################################################################
# Setter/Getter methods
################################################################


################################################################
# Callback methods 回调函数
################################################################
func _on_OpenDebug_pressed():
	get_parent().get_node_or_null("DebugConsole").visible = true
	get_parent().get_node_or_null("DebugConsole/WindowDialog").popup()


func _on_WindowDialog_popup_hide():
	get_parent().get_node_or_null("DebugConsole").visible = false
